--- a/vignettes/file-layout.Rmd
+++ b/vignettes/file-layout.Rmd
@@ -144,12 +144,12 @@ https://github.com/csids/cs9example/blob/main/R/03_tables.R
  11 | 
  12 | set_db_tables <- function() {
  13 |   # __________ ----
- 14 |   # Covid-19  ----
- 15 |   ## > anon_covid19_data ----
+ 14 |   # Weather  ----
+ 15 |   ## > anon_example_weather_rawdata ----
  16 |   global$ss$add_table(
  17 |     name_access = c("anon"),
- 18 |     name_grouping = "covid19",
- 19 |     name_variant = "data",
+ 18 |     name_grouping = "example_weather",
+ 19 |     name_variant = "rawdata",
  20 |     field_types =  c(
  21 |       "granularity_time" = "TEXT",
  22 |       "granularity_geo" = "TEXT",
@@ -162,159 +162,78 @@ https://github.com/csids/cs9example/blob/main/R/03_tables.R
  29 |       "isoyear" = "INTEGER",
  30 |       "isoweek" = "INTEGER",
  31 |       "isoyearweek" = "TEXT",
- 32 |       "season" = "TEXT",
- 33 |       "seasonweek" = "DOUBLE",
- 34 | 
- 35 |       "calyear" = "INTEGER",
- 36 |       "calmonth" = "INTEGER",
- 37 |       "calyearmonth" = "TEXT",
- 38 | 
- 39 |       "date" = "DATE",
+ 32 |       "isoquarter" = "INTEGER",
+ 33 |       "isoyearquarter" = "TEXT",
+ 34 |       "season" = "TEXT",
+ 35 |       "seasonweek" = "DOUBLE",
+ 36 | 
+ 37 |       "calyear" = "INTEGER",
+ 38 |       "calmonth" = "INTEGER",
+ 39 |       "calyearmonth" = "TEXT",
  40 | 
- 41 |       "covid19_cases_testdate_n" = "INTEGER",
- 42 |       "covid19_cases_testdate_pr100000" = "DOUBLE"
- 43 |     ),
- 44 |     keys = c(
- 45 |       "granularity_time",
- 46 |       "location_code",
- 47 |       "date",
- 48 |       "age",
- 49 |       "sex"
- 50 |     ),
- 51 |     indexes = list(
- 52 |       "ind1" = c("granularity_time", "granularity_geo", "country_iso3", "location_code", "border", "age", "sex", "date", "isoyear", "isoweek", "isoyearweek")
+ 41 |       "date" = "DATE",
+ 42 | 
+ 43 |       "temp_max" = "DOUBLE",
+ 44 |       "temp_min" = "DOUBLE",
+ 45 |       "precip" = "DOUBLE"
+ 46 |     ),
+ 47 |     keys = c(
+ 48 |       "granularity_time",
+ 49 |       "location_code",
+ 50 |       "date",
+ 51 |       "age",
+ 52 |       "sex"
  53 |     ),
- 54 |     validator_field_types = csdb::validator_field_types_blank,
- 55 |     validator_field_contents = csdb::validator_field_contents_blank
- 56 |   )
- 57 | 
- 58 |   # __________ ----
- 59 |   # Weather  ----
- 60 |   ## > anon_example_weather_rawdata ----
- 61 |   global$ss$add_table(
- 62 |     name_access = c("anon"),
- 63 |     name_grouping = "example_weather",
- 64 |     name_variant = "rawdata",
- 65 |     field_types =  c(
- 66 |       "granularity_time" = "TEXT",
- 67 |       "granularity_geo" = "TEXT",
- 68 |       "country_iso3" = "TEXT",
- 69 |       "location_code" = "TEXT",
- 70 |       "border" = "INTEGER",
- 71 |       "age" = "TEXT",
- 72 |       "sex" = "TEXT",
- 73 | 
- 74 |       "isoyear" = "INTEGER",
- 75 |       "isoweek" = "INTEGER",
- 76 |       "isoyearweek" = "TEXT",
- 77 |       "season" = "TEXT",
- 78 |       "seasonweek" = "DOUBLE",
- 79 | 
- 80 |       "calyear" = "INTEGER",
- 81 |       "calmonth" = "INTEGER",
- 82 |       "calyearmonth" = "TEXT",
- 83 | 
- 84 |       "date" = "DATE",
- 85 | 
- 86 |       "temp_max" = "DOUBLE",
- 87 |       "temp_min" = "DOUBLE",
- 88 |       "precip" = "DOUBLE"
- 89 |     ),
- 90 |     keys = c(
- 91 |       "granularity_time",
- 92 |       "location_code",
- 93 |       "date",
- 94 |       "age",
- 95 |       "sex"
- 96 |     ),
- 97 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v1,
- 98 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v1
- 99 |   )
-100 | 
-101 |   ## > anon_example_weather_data ----
-102 |   global$ss$add_table(
-103 |     name_access = c("anon"),
-104 |     name_grouping = "example_weather",
-105 |     name_variant = "data",
-106 |     field_types =  c(
-107 |       "granularity_time" = "TEXT",
-108 |       "granularity_geo" = "TEXT",
-109 |       "country_iso3" = "TEXT",
-110 |       "location_code" = "TEXT",
-111 |       "border" = "INTEGER",
-112 |       "age" = "TEXT",
-113 |       "sex" = "TEXT",
-114 | 
-115 |       "isoyear" = "INTEGER",
-116 |       "isoweek" = "INTEGER",
-117 |       "isoyearweek" = "TEXT",
-118 |       "season" = "TEXT",
-119 |       "seasonweek" = "DOUBLE",
-120 | 
-121 |       "calyear" = "INTEGER",
-122 |       "calmonth" = "INTEGER",
-123 |       "calyearmonth" = "TEXT",
-124 | 
-125 |       "date" = "DATE",
-126 | 
-127 |       "temp_max" = "DOUBLE",
-128 |       "temp_min" = "DOUBLE",
-129 |       "precip" = "DOUBLE"
-130 |     ),
-131 |     keys = c(
-132 |       "granularity_time",
-133 |       "location_code",
-134 |       "date",
-135 |       "age",
-136 |       "sex"
-137 |     ),
-138 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v1,
-139 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v1
-140 |   )
-141 | 
-142 |   ## > anon_example_income ----
-143 |   global$ss$add_table(
-144 |     name_access = c("anon"),
-145 |     name_grouping = "example_income",
-146 |     name_variant = NULL,
-147 |     field_types =  c(
-148 |       "granularity_time" = "TEXT",
-149 |       "granularity_geo" = "TEXT",
-150 |       "country_iso3" = "TEXT",
-151 |       "location_code" = "TEXT",
-152 |       "border" = "INTEGER",
-153 |       "age" = "TEXT",
-154 |       "sex" = "TEXT",
-155 | 
-156 |       "isoyear" = "INTEGER",
-157 |       "isoweek" = "INTEGER",
-158 |       "isoyearweek" = "TEXT",
-159 |       "season" = "TEXT",
-160 |       "seasonweek" = "DOUBLE",
-161 | 
-162 |       "calyear" = "INTEGER",
-163 |       "calmonth" = "INTEGER",
-164 |       "calyearmonth" = "TEXT",
-165 | 
-166 |       "date" = "DATE",
-167 | 
-168 |       "household_income_median_all_households_nok" = "DOUBLE",
-169 |       "household_income_median_singles_nok" = "DOUBLE",
-170 |       "household_income_median_couples_without_children_nok" = "DOUBLE",
-171 |       "household_income_median_couples_with_children_nok" = "DOUBLE",
-172 |       "household_income_median_single_with_children_nok" = "DOUBLE"
-173 |     ),
-174 |     keys = c(
-175 |       "granularity_time",
-176 |       "location_code",
-177 |       "date",
-178 |       "age",
-179 |       "sex"
-180 |     ),
-181 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v1,
-182 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v1
-183 |   )
-184 | }
+ 54 |     indexes = list(
+ 55 |       "ind1" = c("granularity_time", "granularity_geo", "country_iso3", "location_code", "border", "age", "sex", "date", "isoyear", "isoweek", "isoyearweek")
+ 56 |     ),
+ 57 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v2,
+ 58 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v2
+ 59 |   )
+ 60 | 
+ 61 |   ## > anon_example_weather_data ----
+ 62 |   global$ss$add_table(
+ 63 |     name_access = c("anon"),
+ 64 |     name_grouping = "example_weather",
+ 65 |     name_variant = "data",
+ 66 |     field_types =  c(
+ 67 |       "granularity_time" = "TEXT",
+ 68 |       "granularity_geo" = "TEXT",
+ 69 |       "country_iso3" = "TEXT",
+ 70 |       "location_code" = "TEXT",
+ 71 |       "border" = "INTEGER",
+ 72 |       "age" = "TEXT",
+ 73 |       "sex" = "TEXT",
+ 74 | 
+ 75 |       "isoyear" = "INTEGER",
+ 76 |       "isoweek" = "INTEGER",
+ 77 |       "isoyearweek" = "TEXT",
+ 78 |       "isoquarter" = "INTEGER",
+ 79 |       "isoyearquarter" = "TEXT",
+ 80 |       "season" = "TEXT",
+ 81 |       "seasonweek" = "DOUBLE",
+ 82 | 
+ 83 |       "calyear" = "INTEGER",
+ 84 |       "calmonth" = "INTEGER",
+ 85 |       "calyearmonth" = "TEXT",
+ 86 | 
+ 87 |       "date" = "DATE",
+ 88 | 
+ 89 |       "temp_max" = "DOUBLE",
+ 90 |       "temp_min" = "DOUBLE",
+ 91 |       "precip" = "DOUBLE"
+ 92 |     ),
+ 93 |     keys = c(
+ 94 |       "granularity_time",
+ 95 |       "location_code",
+ 96 |       "date",
+ 97 |       "age",
+ 98 |       "sex"
+ 99 |     ),
+100 |     validator_field_types = csdb::validator_field_types_csfmt_rts_data_v2,
+101 |     validator_field_contents = csdb::validator_field_contents_csfmt_rts_data_v2
+102 |   )
+103 | }
 ```
 
 ## 04_tasks.R
@@ -325,131 +244,104 @@ https://github.com/csids/cs9example/blob/main/R/04_tasks.R
 ```
 https://github.com/csids/cs9example/blob/main/R/04_tasks.R
 
-  1 | # ******************************************************************************
-  2 | # ******************************************************************************
-  3 | #
-  4 | # 04_tasks.R
-  5 | #
-  6 | # PURPOSE 1:
-  7 | #   Set all the tasks that are run by the package.
-  8 | #
-  9 | #   These are basically all of the "things" that you want to do.
- 10 | #   E.g. Downloading data, cleaning data, importing data, analyzing data,
- 11 | #   making Excel files, making docx/pdf reports, sending emails, etc.
- 12 | #
- 13 | # ******************************************************************************
- 14 | # ******************************************************************************
- 15 | 
- 16 | set_tasks <- function() {
- 17 |   # __________ ----
- 18 |   # Covid-19  ----
- 19 |   ## > covid19_import_data ----
- 20 |   # tm_run_task("covid19_import_data")
- 21 |   global$ss$add_task(
- 22 |     name_grouping = "covid19",
- 23 |     name_action = "import_data",
- 24 |     name_variant = NULL,
- 25 |     cores = 1,
- 26 |     plan_analysis_fn_name = NULL,
- 27 |     for_each_plan = plnr::expand_list(
- 28 |       x = 1
- 29 |     ),
- 30 |     for_each_analysis = NULL,
- 31 |     universal_argset = NULL,
- 32 |     upsert_at_end_of_each_plan = FALSE,
- 33 |     insert_at_end_of_each_plan = FALSE,
- 34 |     action_fn_name = "cs9example::covid19_import_data_action",
- 35 |     data_selector_fn_name = "cs9example::covid19_import_data_data_selector",
- 36 |     tables = list(
- 37 |       # input
- 38 | 
- 39 |       # output
- 40 |       "anon_covid19_data" = global$ss$tables$anon_covid19_data
- 41 |     )
- 42 |   )
- 43 | 
- 44 |   # __________ ----
- 45 |   # Weather  ----
- 46 |   ## > weather_download_and_import_rawdata ----
- 47 |   # tm_run_task("weather_download_and_import_rawdata")
- 48 |   global$ss$add_task(
- 49 |     name_grouping = "weather",
- 50 |     name_action = "download_and_import_rawdata",
- 51 |     name_variant = NULL,
- 52 |     cores = 1,
- 53 |     plan_analysis_fn_name = NULL,
- 54 |     for_each_plan = plnr::expand_list(
- 55 |       location_code = fhidata::norway_locations_names()[granularity_geo %in% c("municip")]$location_code
- 56 |     ),
- 57 |     for_each_analysis = NULL,
- 58 |     universal_argset = NULL,
- 59 |     upsert_at_end_of_each_plan = FALSE,
- 60 |     insert_at_end_of_each_plan = FALSE,
- 61 |     action_fn_name = "cs9example::weather_download_and_import_rawdata_action",
- 62 |     data_selector_fn_name = "cs9example::weather_download_and_import_rawdata_data_selector",
- 63 |     tables = list(
- 64 |       # input
- 65 | 
- 66 |       # output
- 67 |       "anon_example_weather_rawdata" = global$ss$tables$anon_example_weather_rawdata
- 68 |     )
- 69 |   )
- 70 | 
- 71 |   ## > weather_clean_data ----
- 72 |   # tm_run_task("weather_clean_data")
- 73 |   global$ss$add_task(
- 74 |     name_grouping = "weather",
- 75 |     name_action = "clean_data",
- 76 |     name_variant = NULL,
- 77 |     cores = 1,
- 78 |     plan_analysis_fn_name = NULL,
- 79 |     for_each_plan = plnr::expand_list(
- 80 |       x = 1
- 81 |     ),
- 82 |     for_each_analysis = NULL,
- 83 |     universal_argset = NULL,
- 84 |     upsert_at_end_of_each_plan = FALSE,
- 85 |     insert_at_end_of_each_plan = FALSE,
- 86 |     action_fn_name = "cs9example::weather_clean_data_action",
- 87 |     data_selector_fn_name = "cs9example::weather_clean_data_data_selector",
- 88 |     tables = list(
- 89 |       # input
- 90 |       "anon_example_weather_rawdata" = global$ss$tables$anon_example_weather_rawdata,
- 91 | 
- 92 |       # output
- 93 |       "anon_example_weather_data" = global$ss$tables$anon_example_weather_data
- 94 |     )
- 95 |   )
- 96 | 
- 97 |   ## > weather_clean_data ----
- 98 |   # tm_run_task("weather_export_plots")
- 99 |   global$ss$add_task(
-100 |     name_grouping = "weather",
-101 |     name_action = "export_plots",
-102 |     name_variant = NULL,
-103 |     cores = 1,
-104 |     plan_analysis_fn_name = NULL,
-105 |     for_each_plan = plnr::expand_list(
-106 |       location_code = fhidata::norway_locations_names()[granularity_geo %in% c("county")]$location_code
-107 |     ),
-108 |     for_each_analysis = NULL,
-109 |     universal_argset = list(
-110 |       output_dir = tempdir(),
-111 |       output_filename = "weather_{argset$location_code}.png",
-112 |       output_absolute_path = fs::path("{argset$output_dir}", "{argset$output_filename}")
-113 |     ),
-114 |     upsert_at_end_of_each_plan = FALSE,
-115 |     insert_at_end_of_each_plan = FALSE,
-116 |     action_fn_name = "cs9example::weather_export_plots_action",
-117 |     data_selector_fn_name = "cs9example::weather_export_plots_data_selector",
-118 |     tables = list(
-119 |       # input
-120 |       "anon_example_weather_data" = global$ss$tables$anon_example_weather_data
-121 | 
-122 |       # output
-123 |     )
-124 |   )
-125 | }
+ 1 | # ******************************************************************************
+ 2 | # ******************************************************************************
+ 3 | #
+ 4 | # 04_tasks.R
+ 5 | #
+ 6 | # PURPOSE 1:
+ 7 | #   Set all the tasks that are run by the package.
+ 8 | #
+ 9 | #   These are basically all of the "things" that you want to do.
+10 | #   E.g. Downloading data, cleaning data, importing data, analyzing data,
+11 | #   making Excel files, making docx/pdf reports, sending emails, etc.
+12 | #
+13 | # ******************************************************************************
+14 | # ******************************************************************************
+15 | 
+16 | set_tasks <- function() {
+17 |   # __________ ----
+18 |   # Weather  ----
+19 |   ## > weather_download_and_import_rawdata ----
+20 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_download_and_import_rawdata")
+21 |   global$ss$add_task(
+22 |     name_grouping = "weather",
+23 |     name_action = "download_and_import_rawdata",
+24 |     name_variant = NULL,
+25 |     cores = 1,
+26 |     plan_analysis_fn_name = NULL,
+27 |     for_each_plan = plnr::expand_list(
+28 |       location_code = unique(csmaps::nor_municip_map_b2024_default_dt$location_code)
+29 |     ),
+30 |     for_each_analysis = NULL,
+31 |     universal_argset = NULL,
+32 |     upsert_at_end_of_each_plan = FALSE,
+33 |     insert_at_end_of_each_plan = FALSE,
+34 |     action_fn_name = "cs9example::weather_download_and_import_rawdata_action",
+35 |     data_selector_fn_name = "cs9example::weather_download_and_import_rawdata_data_selector",
+36 |     tables = list(
+37 |       # input
+38 | 
+39 |       # output
+40 |       "anon_example_weather_rawdata" = global$ss$tables$anon_example_weather_rawdata
+41 |     )
+42 |   )
+43 | 
+44 |   ## > weather_clean_data ----
+45 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_clean_data")
+46 |   global$ss$add_task(
+47 |     name_grouping = "weather",
+48 |     name_action = "clean_data",
+49 |     name_variant = NULL,
+50 |     cores = 1,
+51 |     plan_analysis_fn_name = NULL,
+52 |     for_each_plan = plnr::expand_list(
+53 |       x = 1
+54 |     ),
+55 |     for_each_analysis = NULL,
+56 |     universal_argset = NULL,
+57 |     upsert_at_end_of_each_plan = FALSE,
+58 |     insert_at_end_of_each_plan = FALSE,
+59 |     action_fn_name = "cs9example::weather_clean_data_action",
+60 |     data_selector_fn_name = "cs9example::weather_clean_data_data_selector",
+61 |     tables = list(
+62 |       # input
+63 |       "anon_example_weather_rawdata" = global$ss$tables$anon_example_weather_rawdata,
+64 | 
+65 |       # output
+66 |       "anon_example_weather_data" = global$ss$tables$anon_example_weather_data
+67 |     )
+68 |   )
+69 | 
+70 |   ## > weather_export_plots ----
+71 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_export_plots")
+72 |   global$ss$add_task(
+73 |     name_grouping = "weather",
+74 |     name_action = "export_plots",
+75 |     name_variant = NULL,
+76 |     cores = 1,
+77 |     plan_analysis_fn_name = NULL,
+78 |     for_each_plan = plnr::expand_list(
+79 |       location_code = csdata::nor_locations_names()[granularity_geo %in% c("county")]$location_code
+80 |     ),
+81 |     for_each_analysis = NULL,
+82 |     universal_argset = list(
+83 |       output_dir = tempdir(),
+84 |       output_filename = "weather_{argset$location_code}.png",
+85 |       output_absolute_path = fs::path("{argset$output_dir}", "{argset$output_filename}")
+86 |     ),
+87 |     upsert_at_end_of_each_plan = FALSE,
+88 |     insert_at_end_of_each_plan = FALSE,
+89 |     action_fn_name = "cs9example::weather_export_plots_action",
+90 |     data_selector_fn_name = "cs9example::weather_export_plots_data_selector",
+91 |     tables = list(
+92 |       # input
+93 |       "anon_example_weather_data" = global$ss$tables$anon_example_weather_data
+94 | 
+95 |       # output
+96 |     )
+97 |   )
+98 | }
 ```
 
 ## 05_deliverables.R
@@ -640,14 +532,14 @@ https://github.com/csids/cs9example/blob/main/R/weather_download_and_import_rawd
  61 |   # res
  62 | 
  63 |   # we now need to format it
- 64 |   res[, granularity_time := "day"]
+ 64 |   res[, granularity_time := "date"]
  65 |   res[, sex := "total"]
  66 |   res[, age := "total"]
  67 |   res[, location_code := argset$location_code]
  68 |   res[, border := global$border]
  69 | 
  70 |   # fill in missing structural variables
- 71 |   cstidy::set_csfmt_rts_data_v1(res)
+ 71 |   cstidy::set_csfmt_rts_data_v2(res)
  72 | 
  73 |   # we look at the downloaded data
  74 |   # res
@@ -677,7 +569,7 @@ https://github.com/csids/cs9example/blob/main/R/weather_download_and_import_rawd
  98 |   }
  99 | 
 100 |   # find the mid lat/long for the specified location_code
-101 |   gps <- fhimaps::norway_lau2_map_b2020_default_dt[location_code == argset$location_code,.(
+101 |   gps <- csmaps::nor_municip_map_b2024_default_dt[location_code == argset$location_code,.(
 102 |     lat = mean(lat),
 103 |     long = mean(long)
 104 |   )]
@@ -714,252 +606,220 @@ https://github.com/csids/cs9example/blob/main/R/weather_clean_data.R
   8 |   # cs9::run_task_sequentially_as_rstudio_job_using_load_all("weather_clean_data")
   9 |   # To be run outside of rstudio: cs9example::global$ss$run_task("weather_clean_data")
  10 | 
- 11 | 
- 12 |   if (plnr::is_run_directly()) {
- 13 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_clean_data")
- 14 | 
- 15 |     index_plan <- 1
- 16 |     index_analysis <- 1
- 17 | 
- 18 |     data <- global$ss$shortcut_get_data("weather_clean_data", index_plan = index_plan)
- 19 |     argset <- global$ss$shortcut_get_argset("weather_clean_data", index_plan = index_plan, index_analysis = index_analysis)
- 20 |     tables <- global$ss$shortcut_get_tables("weather_clean_data")
- 21 |   }
- 22 | 
- 23 |   # special case that runs before everything
- 24 |   if (argset$first_analysis == TRUE) {
- 25 | 
- 26 |   }
- 27 | 
- 28 |   # make sure there's no missing data via the creation of a skeleton
- 29 |   # https://folkehelseinstituttet.github.io/fhidata/articles/Skeletons.html
+ 11 |   if (plnr::is_run_directly()) {
+ 12 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_clean_data")
+ 13 | 
+ 14 |     index_plan <- 1
+ 15 |     index_analysis <- 1
+ 16 | 
+ 17 |     data <- global$ss$shortcut_get_data("weather_clean_data", index_plan = index_plan)
+ 18 |     argset <- global$ss$shortcut_get_argset("weather_clean_data", index_plan = index_plan, index_analysis = index_analysis)
+ 19 |     tables <- global$ss$shortcut_get_tables("weather_clean_data")
+ 20 |   }
+ 21 | 
+ 22 |   # special case that runs before everything
+ 23 |   if (argset$first_analysis == TRUE) {
+ 24 | 
+ 25 |   }
+ 26 | 
+ 27 |   # Pull out important dates
+ 28 |   date_min <- min(data$date_municip$date, na.rm = T)
+ 29 |   date_max <- max(data$date_municip$date, na.rm = T)
  30 | 
- 31 |   # Create a variable (possibly a list) to hold the data
- 32 |   d_agg <- list()
- 33 |   d_agg$day_municip <- copy(data$day_municip)
- 34 | 
- 35 |   # Pull out important dates
- 36 |   date_min <- min(d_agg$day_municip$date, na.rm = T)
- 37 |   date_max <- max(d_agg$day_municip$date, na.rm = T)
+ 31 |   multiskeleton_date <- list()
+ 32 |   # Create skeleton for municip granularity
+ 33 |   multiskeleton_date$municip <- make_skeleton_date(
+ 34 |     date_min = date_min,
+ 35 |     date_max = date_max,
+ 36 |     granularity_geo = "municip"
+ 37 |   )
  38 | 
- 39 |   # Create `multiskeleton`
- 40 |   # granularity_geo should have the following groups:
- 41 |   # - nodata (when no data is available, and there is no "finer" data available to aggregate up)
- 42 |   # - all levels of granularity_geo where you have data available
- 43 |   # If you do not have data for a specific granularity_geo, but there is "finer" data available
- 44 |   # then you should not include this granularity_geo in the multiskeleton, because you will create
- 45 |   # it later when you aggregate up your data (baregion)
- 46 |   multiskeleton_day <- fhidata::make_skeleton(
- 47 |     date_min = date_min,
- 48 |     date_max = date_max,
- 49 |     granularity_geo = list(
- 50 |       "nodata" = c(
- 51 |         "wardoslo",
- 52 |         "extrawardoslo",
- 53 |         "missingwardoslo",
- 54 |         "wardbergen",
- 55 |         "missingwardbergen",
- 56 |         "wardstavanger",
- 57 |         "missingwardstavanger",
- 58 |         "notmainlandmunicip",
- 59 |         "missingmunicip",
- 60 |         "notmainlandcounty",
- 61 |         "missingcounty"
- 62 |       ),
- 63 |       "municip" = c(
- 64 |         "municip"
- 65 |       )
- 66 |     )
- 67 |   )
- 68 | 
- 69 |   # Merge in the information you have at different geographical granularities
- 70 |   # one level at a time
- 71 |   # municip
- 72 |   multiskeleton_day$municip[
- 73 |     d_agg$day_municip,
- 74 |     on = c("location_code", "date"),
- 75 |     c(
- 76 |       "temp_max",
- 77 |       "temp_min",
- 78 |       "precip"
- 79 |     ) := .(
- 80 |       temp_max,
- 81 |       temp_min,
- 82 |       precip
- 83 |     )
- 84 |   ]
- 85 | 
- 86 |   multiskeleton_day$municip[]
- 87 | 
- 88 |   # Aggregate up to higher geographical granularities (county)
- 89 |   multiskeleton_day$county <- multiskeleton_day$municip[
- 90 |     fhidata::norway_locations_hierarchy(
- 91 |       from = "municip",
- 92 |       to = "county"
- 93 |     ),
- 94 |     on = c(
- 95 |       "location_code==from_code"
- 96 |     )
- 97 |   ][,
- 98 |     .(
- 99 |       temp_max = mean(temp_max, na.rm = T),
-100 |       temp_min = mean(temp_min, na.rm = T),
-101 |       precip = mean(precip, na.rm = T),
-102 |       granularity_geo = "county"
-103 |     ),
-104 |     by = .(
-105 |       granularity_time,
-106 |       date,
-107 |       location_code = to_code
-108 |     )
-109 |   ]
-110 | 
-111 |   multiskeleton_day$county[]
-112 | 
-113 |   # Aggregate up to higher geographical granularities (nation)
-114 |   multiskeleton_day$nation <- multiskeleton_day$municip[
-115 |     ,
-116 |     .(
-117 |       temp_max = mean(temp_max, na.rm = T),
-118 |       temp_min = mean(temp_min, na.rm = T),
-119 |       precip = mean(precip, na.rm = T),
-120 |       granularity_geo = "nation",
-121 |       location_code = "norge"
-122 |     ),
-123 |     by = .(
-124 |       granularity_time,
-125 |       date
-126 |     )
-127 |   ]
-128 | 
-129 |   multiskeleton_day$nation[]
-130 | 
-131 |   # combine all the different granularity_geos
-132 |   skeleton_day <- rbindlist(multiskeleton_day, fill = TRUE, use.names = TRUE)
-133 | 
-134 |   skeleton_day[]
-135 | 
-136 |   # 10. (If desirable) aggregate up to higher time granularities
-137 |   # if necessary, it is now easy to aggregate up to weekly data from here
-138 |   skeleton_isoweek <- copy(skeleton_day)
-139 |   skeleton_isoweek[, isoyearweek := fhiplot::isoyearweek_c(date)]
-140 |   skeleton_isoweek <- skeleton_isoweek[
-141 |     ,
-142 |     .(
-143 |       temp_max = mean(temp_max, na.rm = T),
-144 |       temp_min = mean(temp_min, na.rm = T),
-145 |       precip = mean(precip, na.rm = T),
-146 |       granularity_time = "isoweek"
-147 |     ),
-148 |     keyby = .(
-149 |       isoyearweek,
-150 |       granularity_geo,
-151 |       location_code
-152 |     )
-153 |   ]
+ 39 |   # Merge in the information you have at different geographical granularities
+ 40 |   # one level at a time
+ 41 |   # municip
+ 42 |   multiskeleton_date$municip[
+ 43 |     data$date_municip,
+ 44 |     on = c("location_code", "date"),
+ 45 |     c(
+ 46 |       "temp_max",
+ 47 |       "temp_min",
+ 48 |       "precip"
+ 49 |     ) := .(
+ 50 |       temp_max,
+ 51 |       temp_min,
+ 52 |       precip
+ 53 |     )
+ 54 |   ]
+ 55 | 
+ 56 |   # Aggregate up to higher geographical granularities (county)
+ 57 |   multiskeleton_date$county <- multiskeleton_date$municip[
+ 58 |     csdata::nor_locations_hierarchy_from_to(
+ 59 |       from = "municip",
+ 60 |       to = "county"
+ 61 |     ),
+ 62 |     on = c(
+ 63 |       "location_code==from_code"
+ 64 |     )
+ 65 |   ][,
+ 66 |     .(
+ 67 |       temp_max = mean(temp_max, na.rm = T),
+ 68 |       temp_min = mean(temp_min, na.rm = T),
+ 69 |       precip = mean(precip, na.rm = T),
+ 70 |       granularity_geo = "county"
+ 71 |     ),
+ 72 |     by = .(
+ 73 |       granularity_time,
+ 74 |       date,
+ 75 |       location_code = to_code
+ 76 |     )
+ 77 |   ]
+ 78 | 
+ 79 |   multiskeleton_date$county[]
+ 80 | 
+ 81 |   # Aggregate up to higher geographical granularities (nation)
+ 82 |   multiskeleton_date$nation <- multiskeleton_date$municip[
+ 83 |     ,
+ 84 |     .(
+ 85 |       temp_max = mean(temp_max, na.rm = T),
+ 86 |       temp_min = mean(temp_min, na.rm = T),
+ 87 |       precip = mean(precip, na.rm = T),
+ 88 |       granularity_geo = "nation",
+ 89 |       location_code = "nation_nor"
+ 90 |     ),
+ 91 |     by = .(
+ 92 |       granularity_time,
+ 93 |       date
+ 94 |     )
+ 95 |   ]
+ 96 | 
+ 97 |   multiskeleton_date$nation[]
+ 98 | 
+ 99 |   # combine all the different granularity_geos
+100 |   skeleton_date <- rbindlist(multiskeleton_date, fill = TRUE, use.names = TRUE)
+101 | 
+102 |   skeleton_date[]
+103 | 
+104 |   # 10. (If desirable) aggregate up to higher time granularities
+105 |   # if necessary, it is now easy to aggregate up to weekly data from here
+106 |   skeleton_isoyearweek <- copy(skeleton_date)
+107 |   skeleton_isoyearweek[, isoyearweek := cstime::date_to_isoyearweek_c(date)]
+108 |   skeleton_isoyearweek <- skeleton_isoyearweek[
+109 |     ,
+110 |     .(
+111 |       temp_max = mean(temp_max, na.rm = T),
+112 |       temp_min = mean(temp_min, na.rm = T),
+113 |       precip = mean(precip, na.rm = T),
+114 |       granularity_time = "isoyearweek"
+115 |     ),
+116 |     keyby = .(
+117 |       isoyearweek,
+118 |       granularity_geo,
+119 |       location_code
+120 |     )
+121 |   ]
+122 | 
+123 |   skeleton_isoyearweek[]
+124 | 
+125 |   # we now need to format it and fill in missing structural variables
+126 |   # day
+127 |   skeleton_date[, sex := "total"]
+128 |   skeleton_date[, age := "total"]
+129 |   skeleton_date[, border := global$border]
+130 |   cstidy::set_csfmt_rts_data_v2(skeleton_date)
+131 | 
+132 |   # isoweek
+133 |   skeleton_isoyearweek[, sex := "total"]
+134 |   skeleton_isoyearweek[, age := "total"]
+135 |   skeleton_isoyearweek[, border := global$border]
+136 |   cstidy::set_csfmt_rts_data_v2(skeleton_isoyearweek)
+137 | 
+138 |   skeleton <- rbindlist(
+139 |     list(
+140 |       skeleton_date,
+141 |       skeleton_isoyearweek
+142 |     ),
+143 |     use.names = T
+144 |   )
+145 | 
+146 |   # put data in db table
+147 |   tables$anon_example_weather_data$drop_all_rows_and_then_insert_data(skeleton)
+148 | 
+149 |   # special case that runs after everything
+150 |   if (argset$last_analysis == TRUE) {
+151 | 
+152 |   }
+153 | }
 154 | 
-155 |   skeleton_isoweek[]
-156 | 
-157 |   # we now need to format it and fill in missing structural variables
-158 |   # day
-159 |   skeleton_day[, sex := "total"]
-160 |   skeleton_day[, age := "total"]
-161 |   skeleton_day[, border := global$border]
-162 |   cstidy::set_csfmt_rts_data_v1(skeleton_day)
+155 | # **** data_selector **** ----
+156 | #' weather_clean_data (data selector)
+157 | #' @param argset Argset
+158 | #' @param tables DB tables
+159 | #' @export
+160 | weather_clean_data_data_selector <- function(argset, tables) {
+161 |   if (plnr::is_run_directly()) {
+162 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_clean_data")
 163 | 
-164 |   # isoweek
-165 |   skeleton_isoweek[, sex := "total"]
-166 |   skeleton_isoweek[, age := "total"]
-167 |   skeleton_isoweek[, border := global$border]
-168 |   cstidy::set_csfmt_rts_data_v1(skeleton_isoweek)
+164 |     index_plan <- 1
+165 | 
+166 |     argset <- global$ss$shortcut_get_argset("weather_clean_data", index_plan = index_plan)
+167 |     tables <- global$ss$shortcut_get_tables("weather_clean_data")
+168 |   }
 169 | 
-170 |   skeleton <- rbindlist(
-171 |     list(
-172 |       skeleton_day,
-173 |       skeleton_isoweek
-174 |     ),
-175 |     use.names = T
-176 |   )
-177 | 
-178 |   # put data in db table
-179 |   tables$anon_example_weather_data$drop_all_rows_and_then_insert_data(skeleton)
-180 | 
-181 |   # special case that runs after everything
-182 |   if (argset$last_analysis == TRUE) {
-183 | 
-184 |   }
-185 | }
-186 | 
-187 | # **** data_selector **** ----
-188 | #' weather_clean_data (data selector)
-189 | #' @param argset Argset
-190 | #' @param tables DB tables
-191 | #' @export
-192 | weather_clean_data_data_selector <- function(argset, tables) {
-193 |   if (plnr::is_run_directly()) {
-194 |     # global$ss$shortcut_get_plans_argsets_as_dt("weather_clean_data")
-195 | 
-196 |     index_plan <- 1
-197 | 
-198 |     argset <- global$ss$shortcut_get_argset("weather_clean_data", index_plan = index_plan)
-199 |     tables <- global$ss$shortcut_get_tables("weather_clean_data")
-200 |   }
-201 | 
-202 |   # The database tabless can be accessed here
-203 |   d <- tables$anon_example_weather_rawdata$tbl() %>%
-204 |     cs9::mandatory_db_filter(
-205 |       granularity_time = "day",
-206 |       granularity_time_not = NULL,
-207 |       granularity_geo = "municip",
-208 |       granularity_geo_not = NULL,
-209 |       country_iso3 = NULL,
-210 |       location_code = NULL,
-211 |       age = "total",
-212 |       age_not = NULL,
-213 |       sex = "total",
-214 |       sex_not = NULL
-215 |     ) %>%
-216 |     dplyr::select(
-217 |       granularity_time,
-218 |       # granularity_geo,
-219 |       # country_iso3,
-220 |       location_code,
-221 |       # border,
-222 |       # age,
-223 |       # sex,
-224 | 
-225 |       date,
-226 | 
-227 |       # isoyear,
-228 |       # isoweek,
-229 |       # isoyearweek,
-230 |       # season,
-231 |       # seasonweek,
-232 | 
-233 |       # calyear,
-234 |       # calmonth,
-235 |       # calyearmonth,
-236 | 
-237 |       temp_max,
-238 |       temp_min,
-239 |       precip
-240 |     ) %>%
-241 |     dplyr::collect() %>%
-242 |     as.data.table() %>%
-243 |     setorder(
-244 |       location_code,
-245 |       date
-246 |     )
-247 | 
-248 |   # The variable returned must be a named list
-249 |   retval <- list(
-250 |     "day_municip" = d
-251 |   )
-252 | 
-253 |   retval
-254 | }
-255 | 
-256 | # **** functions **** ----
+170 |   # The database tabless can be accessed here
+171 |   d <- tables$anon_example_weather_rawdata$tbl() %>%
+172 |     cs9::mandatory_db_filter(
+173 |       granularity_time = "date",
+174 |       granularity_time_not = NULL,
+175 |       granularity_geo = "municip",
+176 |       granularity_geo_not = NULL,
+177 |       country_iso3 = NULL,
+178 |       location_code = NULL,
+179 |       age = "total",
+180 |       age_not = NULL,
+181 |       sex = "total",
+182 |       sex_not = NULL
+183 |     ) %>%
+184 |     dplyr::select(
+185 |       granularity_time,
+186 |       # granularity_geo,
+187 |       # country_iso3,
+188 |       location_code,
+189 |       # border,
+190 |       # age,
+191 |       # sex,
+192 | 
+193 |       date,
+194 | 
+195 |       # isoyear,
+196 |       # isoweek,
+197 |       # isoyearweek,
+198 |       # season,
+199 |       # seasonweek,
+200 | 
+201 |       # calyear,
+202 |       # calmonth,
+203 |       # calyearmonth,
+204 | 
+205 |       temp_max,
+206 |       temp_min,
+207 |       precip
+208 |     ) %>%
+209 |     dplyr::collect() %>%
+210 |     as.data.table() %>%
+211 |     setorder(
+212 |       location_code,
+213 |       date
+214 |     )
+215 | 
+216 |   # The variable returned must be a named list
+217 |   retval <- list(
+218 |     "date_municip" = d
+219 |   )
+220 | 
+221 |   retval
+222 | }
+223 | 
+224 | # **** functions **** ----
 ```
 
 ### weather_export_weather_plots.R
